Replace "List<HistRec> hist" with "Hist hist" in TaskImpl.